--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -2,6 +2,7 @@
     0% {
         transform: rotateY(0);
     }
+
     100% {
         transform: rotateY(180deg);
     }
@@ -11,11 +12,52 @@
     0% {
         transform: rotateY(180deg);
     }
+
     100% {
         transform: rotateY(0);
     }
 }
 
+@keyframes animation-pick-card {
+    0% {
+        scale: 1.1;
+    }
+
+    100% {
+        scale: 1;
+    }
+}
+
+@keyframes border-shine {
+    0% {
+        filter: brightness(1);
+    }
+
+    50% {
+        filter: brightness(1.5);
+    }
+
+    100% {
+        filter: brightness(1);
+    }
+}
+
+@keyframes star-twinkle {
+    0% {
+        transform: scale(0);
+        opacity: 0;
+    }
+
+    50% {
+        transform: scale(1.5);
+        opacity: 1;
+    }
+
+    100% {
+        transform: scale(0);
+        opacity: 0;
+    }
+}
 
 @keyframes shuffled-card-1 {
     0% {
