--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -54,8 +54,8 @@ html, body {
 
 .content-logo .title {
   display: inline-block;
-  padding: 8px 32px;
-  line-height: 40px;
+  padding: 0.6rem 2rem;
+  line-height: 2.5rem;
   box-sizing: border-box;
   font-weight: 300;
   border: none;
@@ -68,33 +68,41 @@ html, body {
   display: none;
   position: relative;
   margin-bottom: 2rem;
+  font-size: 1rem;
+  opacity: 0;
 }
 
 .content-logo .title.pick {
-  padding-left: 80px;
+  padding-left: 5rem;
+}
+
+@media all and (max-width: 422px) {  
+  .content-logo .title.pick {
+    font-size: 0.78rem;
+  }
 }
 
 .content-logo .title.title.pick-select {
-  padding-inline: 88px;
+  padding-inline: 6rem;
 }
 
 .content-logo.animation-state-1 .title.pick,
 .content-logo.selectable .title.pick-select {
   display: inline-block;
+  opacity: 1;
 }
 
 .content-logo .title.pick .icon-booster {
   position: absolute;
-  top: -12px;
+  top: 0;
   left: 20px;
   width: 41px;
   height: 80px;
   background-image: url('../../public/booster-a1a.webp');
   background-size: 41px 80px;
   background-repeat: no-repeat;
-  transform: rotate(10deg);
+  transform: translateY(-12%) rotate(10deg);
 }
-
 
 .content-cards {
   position: relative;
@@ -311,7 +319,6 @@ html, body {
   width: 30px;
   height: 30px;
   background: radial-gradient(circle, #fff 0%, #ffd700 50%, transparent 100%);
-  ;
   clip-path: polygon(50% 0%, 62.13% 37.88%, 100% 50%, 62.13% 58.88%, 50% 100%, 37.88% 58.88%, 0% 50%, 37.88% 37.88%);
   filter: blur(1px) brightness(1.5);
 }
@@ -321,23 +328,36 @@ html, body {
   position: relative;
 }
 
+@property --buttonLinearGradientFrom {
+  syntax: '<color>';
+  initial-value: #3ac0b3;
+  inherits: false;
+}
+@property --buttonLinearGradientTo {
+  syntax: '<color>';
+  initial-value: #00d4ff;
+  inherits: false;
+}
+
 .content-actions button {
-  padding: 8px 32px;
-  height: 46px;
+  padding: 0.6rem 2.6rem;
+  height: 3rem;
   box-sizing: border-box;
   font-weight: 300;
   border: none;
   background: rgb(2,0,36);
-  background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(58,192,179,1) 0%, rgba(0,212,255,1) 100%);
+  background: linear-gradient(0deg, var(--buttonLinearGradientFrom) 0%, #00d4ff 100%);
   color: #fff;
   border-radius: 23px;
-  transition: all 0.3s ease;
+  transition: background 0.3s ease, --buttonLinearGradientFrom 0.3s ease;
   user-select: none;
+  font-size: 1rem;
+  font-family: inherit;
+  cursor: pointer;
 }
 
 .content-actions button:hover {
-  background: rgb(2,0,36);
-background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(55,230,213,1) 0%, rgba(0,212,255,1) 100%);
+  --buttonLinearGradientFrom: #37e6d5;
 }
 
 .content-actions button:focus {
